correct bugs at backend
