# src/controller_app/equipment_model/models.py
@@ -1,4 +1,5 @@
 from ..database import db
+from sqlalchemy.dialects.mysql import LONGBLOB
 import json
 
 
@@ -7,12 +8,14 @@ class EquipmentModel(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     factory_id = db.Column(db.Integer, db.ForeignKey("factories.id"))
     class_map = db.Column(db.TEXT)
-    pb = db.Column(db.LargeBinary)
+    pb = db.Column(LONGBLOB)
     md5 = db.Column(db.String(50))
 
     @property
     def dict(self):
         return {
+            "id": self.id,
+            "factoryId": self.factory_id,
             "mapping": json.loads(self.class_map),
             "md5": self.md5
         }
