# src/controller_app/workstation/controllers.py
@@ -1,5 +1,5 @@
 from flask import Blueprint, jsonify, request, abort
-from .models import WorkStation, worker_location
+from .models import Workstation, worker_location
 from ..factory.models import Factory
 from ..worker.models import Worker
 from ..database import db
@@ -10,9 +10,9 @@ workstation_bp = Blueprint("workstation", __name__)
 @workstation_bp.route("/factory/<int:factory_id>/workstation", methods=["GET"])
 def get_workstation_list(factory_id: int):
     name_contain = request.args.get("nameContain")
-    q = WorkStation.query.filter_by(factory_id=factory_id)
+    q = Workstation.query.filter_by(factory_id=factory_id)
     if name_contain is not None:
-        q = q.filter(WorkStation.name.contains(name_contain))
+        q = q.filter(Workstation.name.contains(name_contain))
 
     result = [workstation.dict for workstation in q.all()]
     return jsonify(result)
@@ -20,7 +20,7 @@ def get_workstation_list(factory_id: int):
 
 @workstation_bp.route("/factory/<int:factory_id>/workstation/<int:workstation_id>", methods=["GET"])
 def get_workstation(factory_id: int, workstation_id: int):
-    workstation = WorkStation.query.filter_by(id=workstation_id, factory_id=factory_id).first()
+    workstation = Workstation.query.filter_by(id=workstation_id, factory_id=factory_id).first()
     if workstation is None:
         abort(404, "fail to find the workstation in this factory")
     else:
@@ -39,7 +39,7 @@ def add_workstation(factory_id: int):
     description = request_body.get("description")
     if workstation_name is None:
         abort(400, "need a name for workstation")
-    workstation = WorkStation(id=workstation_id ,name=workstation_name, description=description)
+    workstation = Workstation(id=workstation_id, name=workstation_name, description=description)
     factory.workstations.append(workstation)
     # db.session.add(workstation)
     db.session.commit()
@@ -48,7 +48,7 @@ def add_workstation(factory_id: int):
 
 @workstation_bp.route("/factory/<int:factory_id>/workstation/<int:workstation_id>/worker", methods=["GET"])
 def get_workers_in_station(factory_id: int, workstation_id: int):
-    workstation = WorkStation.query.filter_by(factory_id=factory_id, id=workstation_id).first()
+    workstation = Workstation.query.filter_by(factory_id=factory_id, id=workstation_id).first()
     if workstation is None:
         abort(404, "factory or workstation not found")
     workers = workstation.workers
@@ -64,7 +64,7 @@ def add_worker_to_station(factory_id: int, workstation_id: int):
         abort(400, "need to provide a worker id")
     else:
         worker = Worker.query.filter_by(eid=worker_eid, factory_id=factory_id).first_or_404()
-        workstation = WorkStation.query.filter_by(id=workstation_id).first_or_404()
+        workstation = Workstation.query.filter_by(id=workstation_id).first_or_404()
         workstation.workers.append(worker)
         db.session.commit()
 
